fix overflow text

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -32,6 +32,8 @@
   }
   .nav-text {
     padding: 0.75em;
+    width: 80%;
+    word-wrap: break-word;
   }
 }
 
